# zen-rs-poc

./: Cargo.toml  rustfmt.toml
benches/: my_benchmark.rs
crates/zen_macro/: Cargo.toml
crates/zen_macro/src/: lib.rs
crates/zen_material/: Cargo.toml
crates/zen_material/derive/: Cargo.toml
crates/zen_material/src/: lib.rs
crates/zen_types/: Cargo.toml
crates/zen_types/src/: lib.rs
examples/: basic_scene.rs
examples/common/: app.rs  fps_counter.rs  mod.rs  orbit_camera.rs
src/: buffer.rs  camera.rs  geometry.rs  graphics.rs  lib.rs  material.rs  math.rs  primitive.rs  render.rs  resource.rs  sampler.rs  scene.rs  shader.rs  target.rs  texture.rs  utils.rs  wgpu.rs  world.rs
src/buffer/: slice.rs
src/camera/: projection.rs
src/geometry/: attribute.rs  factory.rs  vertex_buffer.rs
src/graphics/: geometry.rs  geometry_factory.rs  material.rs  mod.rs  primitive.rs  shader.wgsl  texture.rs
src/material/: binding_data.rs  parameter.rs
src/math/: matrix4.rs  mod.rs  quat.rs  quaternion.rs  vector3.rs
src/render/: bindgroups.rs  buffers.rs  collect.rs  collector.rs  geometries.rs  mod.rs  pipelines.rs  samplers.rs  surfaces.rs  target.rs  targets.rs  traits.rs
src/resource/: pool.rs
src/scene/: camera.rs  mod.rs  object3d.rs  scene.rs
src/shader/: builder.rs  builtins.rs  schema.rs  types.rs
src/texture/: data.rs  format.rs  kind.rs  source.rs
src/wgpu/: bindgroups.rs  buffers.rs  geometries.rs  materials.rs  pipelines.rs  renderer.rs  samplers.rs  shader.wgsl  shader_with_texture.wgsl  surfaces.rs  targets.rs  textures.rs
(+21 files in other folders)
