[package]
name = "zen-rs-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26"
glam = "0.29"
bytemuck = { version = "1.19", features = [ "derive" ] }

[dev-dependencies]
pollster = "0.4.0"
winit = "0.30.12"
criterion = "0.7.0"
rand = "0.8"

[dev-dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[bench]]
name = "my_benchmark"
harness = false
