[package]
name = "zen-rs-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26"
glam = "0.29"
bytemuck = { version = "1.19", features = [ "derive" ] }
zen_macro = { path = "crates/zen_macro" }

[dev-dependencies]
pollster = "0.4.0"
winit = "0.30.12"
rand = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element", "console"] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[[bench]]
name = "my_benchmark"
harness = false

[workspace]
members = [
    "crates/*"
]
